ks/dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploynew
  labels:
    env: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wapp
  template:
    metadata:
      name: pod
      labels:
        app: wapp
    spec:
      containers:
        - name: cont1
          image: narasimhasai95/weatherapp
          ports:
            - containerPort: 80
         

---
apiVersion: v1
kind: Service
metadata:
  name: deployservicce
spec:
  type: LoadBalancer
  selector:
    app: wapp
  ports:
    - port: 80
      targetPort: 80
